[tool.poetry]
name = "safe_rl"
version = "0.1.0"
description = "A package that enables performing Safe RL experiiments"
authors = ["Anand Balakrishnan <anandbal@usc.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.0"
gym = { version = "^0.11.0", extras = [ "box2d"] }
pandas = "^0.24.1"

cloudpickle = "^0.7.0"
# stable-baselines = "^2.4"

temporal-logic = { git = "https://github.com/anand-bala/tl-py", tag="v0.1.3"}
msgpack = "^0.6.1"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
rope = "^0.12.0"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
