[metadata]
name = simple_bhnr
version = 0.1.0
description = "Simple, PyTorch implementation of BHNR+RL"
author = Anand Balakrishnan
author_email = anandbal@usc.edu

[options]
python_requires = ~=3.5
package_dir=
  =src
packages=find:
install_requires = 
  torch ~= 1.0
  gym[box2d] ~= 0.11.0
  pandas ~= 0.24.1
  cloudpickle ~= 0.7.0
  temporal-logic @ https://github.com/anand-bala/tl-py/tarball/v0.1.4
  msgpack ~= 0.6.1
  matplotlib ~= 3.0
zip_safe = false
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov

[options.packages.find]
where=src

